--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,21 @@
     max-width: 1200px;
     margin: 0 auto;
   }
+  #toggle-dark-mode{
+          margin-top: 1rem;
+          padding: 0.5rem;
+          border: none;
+          border-radius: 5px;
+          background: #333;
+          color: #fff;
+          font-size: 1rem;
+          cursor: pointer;
+          transition: 2s;
+  }
+  #toggle-dark-mode:hover{
+    background: #fff;
+    color: #333;
+  }
   
   .blog-posts {
     display: grid;
@@ -92,12 +107,13 @@
   .post img {
     width: 100%;
     height: 200px;
-    object-fit: cover;
+    object-fit: calc(100%,200px);
   }
   
   .post-content {
     padding: 1.5rem;
   }
+
   
   .post h2 {
     font-size: 1.5rem;
